Bug #21690 Unbalanced data distribution in MySQL Cluster
Submitted: 17 Aug 2006 8:45 Modified: 6 Dec 2006 14:31
Reporter: Mikael Ronstrom
Status: Closed
Category:Server: NDBAPI Severity:S2 (Serious)
Version:5.1.12-Beta (06.07.19) OS:Linux (Fedora Core 5)
Assigned to: Jon Stephens Target Version:

[17 Aug 2006 8:45] Mikael Ronstrom
Description:
When creating a table in MySQL Cluster on a system with at least 2 node groups the
data becomes unbalanced. On a 4-node system with 2 replicas, 75% of the data goes
into nodegroup 0 and only 25% of the data goes into nodegroup 1.

How to repeat:
Load table, use all dump 1000 to see the size of data memory used.

Suggested fix:
Fix allocation of default nodegroups in
execCREATE_FRAGMENTATIONREQ in DBDIH
Now becomes 0,0,1,0 should be 0,1,0,1 for a 4-node system.
[17 Aug 2006 15:15] Mikael Ronstrom
Reviewed by Jonas Oreland
[19 Aug 2006 18:49] Mikael Ronstrom
Testing the patch showed that the fix rather introduced a bug rather than fixed it.
It did also point to the cause of the problem being the implementation of BLOB's.
For some reason all BLOB's are stored in partition 0.
[31 Aug 2006 10:55] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/11149

ChangeSet@1.2301, 2006-08-31 10:54:34+02:00, pekka@orca.ndb.mysql.com +1 -0
  ndb - bug#21690 workaround-fix, cleanup in separate patch
[6 Sep 2006 9:08] Jonas Oreland
pushed into 5.1.12
[6 Sep 2006 13:51] Jon Stephens
Documented bugfix in 5.1.12 changelog.
[26 Sep 2006 14:22] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/12519

ChangeSet@1.2318, 2006-09-26 14:21:52+02:00, pekka@orca.ndb.mysql.com +6 -0
  ndb - bug#21690: cleanup: set column properties in any order before create
[26 Sep 2006 15:57] Calvin Sun
Pekka just sent out a patch for a cleanup.
[14 Oct 2006 16:17] Jon Stephens
Per Pekka's remarks, and since the server bugfix has been documented, I'm changing the
bug's category/status to Docs/NDI and reassigning it to myself.
[14 Oct 2006 16:17] Jon Stephens
Per Pekka's remarks, and since the server bugfix has been documented, I'm changing the
bug's category/status to Docs/NDI and reassigning it to myself.
[26 Nov 2006 12:01] Jon Stephens
Thank you for your bug report. This issue has been addressed in the documentation. The
updated documentation will appear on our website shortly, and will be included in the
next release of the relevant products.

Added preliminary documentation of new API methods to Cluster API Guide.

Docs changeset - http://lists.mysql.com/commits/15822
[1 Dec 2006 2:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/16261

ChangeSet@1.2337, 2006-12-01 02:06:37+01:00, pekka@orca.ndb.mysql.com +2 -0
  ndb - bug#21690: fix typo which changed blob parts distribution
[1 Dec 2006 2:17] Pekka Nousiainen
A typo in cleanup patch made it _too_ balanced.
[6 Dec 2006 14:31] Jon Stephens
No new functionality or other changes to document for the corrective patch - closed bug
without further action.