ndb - bug#21690 workaround-fix, cleanup in separate patch

storage/ndb/src/ndbapi/NdbBlob.cpp:
  currently distr keys must be set at end due to bug